<resources>
    <string name="app_name">Погода ИВТ</string>
    <string name="celsius_text">C</string>
    <string name="fahrenheit_text">F</string>
    <string name="city_change_text">Город</string>
    <string name="geoloc_text">Моё местоположение</string>
    <string name="feels_like_text">Ощущается</string>
    <string name="pressure_text">Давление</string>
    <string name="wind_text">Ветер</string>
    <string name="humidity_text">Влажность</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_city_text">Название города</string>
    <string name="ok_text">OK</string>
    <string name="deegrees_text">°</string>
</resources>