<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homework_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/cityName"
        android:layout_width="240dp"
        android:layout_height="42dp"
        android:textColor="#ffffff"
        android:ems="25"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.085"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/buttonCelsius"
        android:layout_width="61dp"
        android:layout_height="47dp"
        android:background="@drawable/radius_left"
        android:text="@string/celsius_text"
        android:textColor="#ffffff"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonFarenheit"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/buttonFarenheit"
        android:layout_width="61dp"
        android:layout_height="47dp"
        android:background="@drawable/radius_right"
        android:text="@string/fahrenheit_text"
        android:textColor="#aabcd5"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.96"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/buttonCityChange"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="130dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:background="#7290b9"
        android:gravity="start"
        android:text="@string/city_change_text"
        android:textAllCaps="false"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonGeoloc"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="200dp"
        android:layout_height="27dp"
        android:layout_marginTop="20dp"
        android:background="#7290b9"
        android:gravity="start"
        android:text="@string/geoloc_text"
        android:textAllCaps="false"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.957"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        app:layout_constraintVertical_bias="0.001" />

    <ImageView
        android:id="@+id/cursorImage"
        android:layout_width="33dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="#7290b9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonGeoloc"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/buttonCityChange"
        app:layout_constraintTop_toBottomOf="@+id/cityName"
        app:layout_constraintVertical_bias="0"
        app:srcCompat="@mipmap/location"
        tools:ignore="ContentDescription"/>



    <TextView
        android:id="@+id/windInfoText"
        android:layout_width="61dp"
        android:layout_height="28dp"
        android:gravity="start"
        android:text="@string/wind_text"
        android:textAlignment="textStart"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/windInfo"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/windInfo"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/humidityInfo"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/humidityInfoText"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:gravity="start"
        android:text="@string/humidity_text"
        android:textAlignment="textStart"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/humidityInfo"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/feelsLike"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/windInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <TextView
        android:id="@+id/feelsLikeInfoText"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:gravity="start"
        android:text="@string/feels_like_text"
        android:textAlignment="textStart"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/feelsLike"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pressureInfo"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/humidityInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/pressureInfoText"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:gravity="start"
        android:text="@string/pressure_text"
        android:textAlignment="textStart"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/pressureInfo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/temperature"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/weatherDesription"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="190dp"
        android:layout_height="102dp"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

    <TextView
        android:id="@+id/degrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deegrees_text"
        android:textColor="#aabcd5"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGeoloc"
        app:layout_constraintEnd_toStartOf="@+id/buttonCelsius"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/cityName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

</androidx.constraintlayout.widget.ConstraintLayout>