<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/homework_color"
    tools:context=".SelectCityActivity">

    <EditText
        android:id="@+id/selectCityName"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_rounded"
        android:ems="25"
        android:hint="@string/select_city_text"
        android:inputType="textCapWords"
        android:paddingStart="15dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textSize="20sp"
        android:textColor="#1086ff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:background="@drawable/edit_text_button"
        android:text="@string/ok_text"
        android:textColor="#1086ff"
        app:layout_constraintBottom_toBottomOf="@+id/selectCityName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/selectCityName"
        app:layout_constraintTop_toTopOf="@+id/selectCityName"
        app:layout_constraintVertical_bias="0.04" />



    <TextView
        android:id="@+id/windInfoText"
        android:layout_width="61dp"
        android:layout_height="28dp"
        android:gravity="start"
        android:text="@string/wind_text"
        android:textAlignment="textStart"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/windInfo"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/windInfo"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.773" />

    <TextView
        android:id="@+id/humidityInfo"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/humidityInfoText"
        android:layout_width="113dp"
        android:layout_height="28dp"
        android:gravity="start"
        android:text="@string/humidity_text"
        android:textAlignment="textStart"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/humidityInfo"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />
    <TextView
        android:id="@+id/feelsLike"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/windInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <TextView
        android:id="@+id/feelsLikeInfoText"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:gravity="start"
        android:text="@string/feels_like_text"
        android:textAlignment="textStart"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/feelsLike"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/pressureInfo"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:gravity="start"
        android:textAlignment="textStart"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/humidityInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.926" />

    <TextView
        android:id="@+id/pressureInfoText"
        android:layout_width="145dp"
        android:layout_height="28dp"
        android:gravity="start"
        android:text="@string/pressure_text"
        android:textAlignment="textStart"
        android:textColor="#aabcd5"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/pressureInfo"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/weatherImage"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/temperature"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.419"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/weatherDesription"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="190dp"
        android:layout_height="102dp"
        android:textAllCaps="true"
        android:textColor="#ffffff"
        android:textSize="56sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.85"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />

</androidx.constraintlayout.widget.ConstraintLayout>